Correct `NAME` for DDNS

--- a/traefik-cf.yml
+++ b/traefik-cf.yml
@@ -53,7 +53,7 @@ services:
       - CF_DNS__AUTH__SCOPED_TOKEN=${CF_DNS_API_TOKEN}
       - CF_DNS__DOMAINS_0__ZONE_NAME=${DOMAIN}
       - CF_DNS__DOMAINS_0__ZONE_ID=${CF_ZONE_ID:-}
-      - CF_DNS__DOMAINS_0__NAME=${DDNS_SUBDOMAIN}
+      - CF_DNS__DOMAINS_0__NAME=${DDNS_SUBDOMAIN}.${DOMAIN}
       - CF_DNS__DOMAINS_0__PROXIED=${DDNS_PROXY}
       - CF_DNS__DOMAINS_0__CREATE=true
       - CF_DNS__DOMAINS_0__TYPE=A
@@ -68,7 +68,7 @@ services:
       - CF_DNS__AUTH__SCOPED_TOKEN=${CF_DNS_API_TOKEN}
       - CF_DNS__DOMAINS_0__ZONE_NAME=${DOMAIN}
       - CF_DNS__DOMAINS_0__ZONE_ID=${CF_ZONE_ID:-}
-      - CF_DNS__DOMAINS_0__NAME=${DDNS_SUBDOMAIN}
+      - CF_DNS__DOMAINS_0__NAME=${DDNS_SUBDOMAIN}.${DOMAIN}
       - CF_DNS__DOMAINS_0__PROXIED=${DDNS_PROXY}
       - CF_DNS__DOMAINS_0__CREATE=true
       - CF_DNS__DOMAINS_0__TYPE=AAAA
