--- a/traefik-cf.yml
+++ b/traefik-cf.yml
@@ -12,12 +12,12 @@ services:
     image: traefik:v2.9
     restart: "unless-stopped"
     command:
-#      - --log.level=DEBUG
 #      - --accesslog=true
 #      - --accesslog.format=json
 #      - --accesslog.fields.defaultmode=keep
 #      - --accesslog.fields.headers.defaultmode=keep
 #      - --certificatesResolvers.letsencrypt.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory
+      - --log.level=${LOG_LEVEL:-info}
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
       - --certificatesresolvers.letsencrypt.acme.dnschallenge=true
@@ -30,7 +30,6 @@ services:
       - --entrypoints.websecure.address=:${TRAEFIK_WEB_PORT}
       - --metrics
       - --metrics.prometheus
-
     ports:
       - ${HOST_IP:-}${TRAEFIK_WEB_PORT}:${TRAEFIK_WEB_PORT}/tcp
       - ${HOST_IP:-}${TRAEFIK_WEB_HTTP_PORT}:${TRAEFIK_WEB_HTTP_PORT}/tcp
@@ -41,10 +40,15 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - certs:/letsencrypt
       - /etc/localtime:/etc/localtime:ro
-    <<: *logging
     depends_on:
       - cf-ddns-v4
       - cf-ddns-v6
+    labels:
+      - metrics.scrape=true
+      - metrics.path=/metrics
+      - metrics.port=8080
+    <<: *logging
+
   cf-ddns-v4:
     image: ghcr.io/joshuaavalon/cloudflare-ddns:3
     restart: "unless-stopped"
@@ -60,6 +64,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
+
   cf-ddns-v6:
     image: ghcr.io/joshuaavalon/cloudflare-ddns:3
     restart: "unless-stopped"
@@ -75,5 +80,6 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
+
 volumes:
   certs:
