--- a/reth.yml
+++ b/reth.yml
@@ -42,7 +42,7 @@ services:
       - docker-entrypoint.sh
       - reth
       - node
-      - --db
+      - --datadir
       - /var/lib/reth
       - --chain
       - ${NETWORK}
