Fix lodestar and nimbus entrypoint on fresh sync

--- a/lodestar-cl-only.yml
+++ b/lodestar-cl-only.yml
@@ -53,6 +53,7 @@ services:
       - ${CL_REST_PORT:-5052}
       - --port
       - ${CL_P2P_PORT:-9000}
+      - --nat
       - --metrics
       - "true"
       - --metrics.port
