--- a/reth.yml
+++ b/reth.yml
@@ -52,6 +52,8 @@ services:
       - ${EL_P2P_PORT:-30303}
       - --discovery.port
       - ${EL_P2P_PORT:-30303}
+      - --nat
+      - publicip
       - --http
       - --http.addr
       - 0.0.0.0
