web3signer support

--- a/default.env
+++ b/default.env
@@ -25,6 +25,8 @@ RAPID_SYNC_URL=
 DOPPELGANGER=false
 # Auto-pruning Nethermind is usually safe. Set this to true to enable auto-pruning, and to anything else to disable it
 AUTOPRUNE_NM=true
+# Whether to use web3signer for validator keys. Setting this to "true" also requires web3signer.yml in COMPOSE_FILE
+WEB3SIGNER=false
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
