--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -100,6 +100,7 @@ services:
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - KEY_API_PORT=${KEY_API_PORT:-7500}
+      - WEB3SIGNER=${WEB3SIGNER:-false}
     depends_on:
       - validator
     entrypoint:
