--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -84,6 +84,7 @@ services:
       - TLS="true"
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - KEY_API_PORT=${KEY_API_PORT:-7500}
+      - WEB3SIGNER=${WEB3SIGNER:-false}
     depends_on:
       - validator
     entrypoint:
