--- a/prysm.yml
+++ b/prysm.yml
@@ -218,6 +218,7 @@ services:
     environment:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - KEY_API_PORT=${KEY_API_PORT:-7500}
+      - WEB3SIGNER=${WEB3SIGNER:-false}
       - PRYSM="true"
     depends_on:
       - validator
