--- a/teku.yml
+++ b/teku.yml
@@ -128,6 +128,7 @@ services:
       - TLS="true"
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - KEY_API_PORT=${KEY_API_PORT:-7500}
+      - WEB3SIGNER=${WEB3SIGNER:-false}
     depends_on:
       - consensus
     entrypoint:
