--- a/default.env
+++ b/default.env
@@ -135,7 +135,8 @@ COMPOSEV1_NAG=true
 # Authenticated execution client endpoint. This default uses the execution node container.
 EL_NODE=http://execution:8551
 # Consensus client address. This could be comma-separated for Lighthouse or Teku VC clients, with failover,
-# or could just be a remote consensus client URL for "validator only" setups. Not in use for Nimbus.
+# or could just be a remote consensus client URL for "validator only" setups.
+# For Nimbus VC client, put the first beacon node here, and use VC_EXTRAS for additional.
 CL_NODE=http://consensus:5052
 # MEV-boost address. This would only be changed for Vouch setups
 MEV_NODE=http://mev-boost:18550
