Better web3signer handling for Teku and Prysm

--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -32,6 +32,7 @@ services:
       - VC_EXTRAS=${VC_EXTRAS:-}
       - GRAFFITI=${GRAFFITI:-}
       - DEFAULT_GRAFFITI=${DEFAULT_GRAFFITI:-false}
+      - WEB3SIGNER=${WEB3SIGNER:-false}
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -80,6 +81,7 @@ services:
     user: prysmvalidator
     environment:
       - NETWORK=${NETWORK}
+      - WEB3SIGNER=${WEB3SIGNER:-false}
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
