Lighthouse IPv6 behind an env var

--- a/default.env
+++ b/default.env
@@ -27,6 +27,8 @@ DOPPELGANGER=false
 AUTOPRUNE_NM=true
 # Whether to use web3signer for validator keys. Setting this to "true" also requires web3signer.yml in COMPOSE_FILE
 WEB3SIGNER=false
+# Whether to explicitly enable IPv6 P2P. In use only for Lighthouse. See also v6-network.yml
+IPV6=false
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
