--- a/nethermind/Dockerfile.dev
+++ b/nethermind/Dockerfile.dev
@@ -1,6 +1,9 @@
 ARG DOCKER_TAG
 
-FROM ghcr.io/tomwright/dasel:v2.2.0-alpine as dasel
+FROM alpine as dasel
+RUN arch=$(arch | sed s/aarch64/arm64/ | sed s/x86_64/amd64/) && \
+    wget -q https://github.com/TomWright/dasel/releases/download/v2.2.0/dasel_linux_${arch} -O /usr/local/bin/dasel && \
+    chmod +x /usr/local/bin/dasel
 
 FROM nethermindeth/nethermind:${DOCKER_TAG}
 
