DDNS_SUBDOMAIN can't be empty

--- a/default.env
+++ b/default.env
@@ -48,7 +48,7 @@ EL_WS_HOST=elws
 EL_WS_LB=elws-lb
 CL_HOST=cl
 CL_LB=cl-lb
-DDNS_SUBDOMAIN=
+DDNS_SUBDOMAIN=grafana
 DDNS_PROXY=true
 
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
