ethd keys works with RocketPool reverse hybrid

--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -32,6 +32,10 @@ services:
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
       - /etc/localtime:/etc/localtime:ro
+    networks:
+      default:
+        aliases:
+          - vc
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -106,7 +110,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/lodestar/validators/validator-db/api-token.txt
-      - validator
+      - vc
 
 volumes:
   lsvalidator-data:
