--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -32,6 +32,10 @@ services:
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
+    networks:
+      default:
+        aliases:
+          - vc
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -105,7 +109,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/lighthouse/validators/api-token.txt
-      - validator
+      - vc
 
 volumes:
   lhvalidator-data:
