--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -33,6 +33,10 @@ services:
       - GRAFFITI=${GRAFFITI:-}
       - DEFAULT_GRAFFITI=${DEFAULT_GRAFFITI:-false}
       - WEB3SIGNER=${WEB3SIGNER:-false}
+    networks:
+      default:
+        aliases:
+          - vc
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -160,7 +164,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/prysm/auth-token
-      - validator
+      - vc
 
 volumes:
   prysmvalidator-data:
