ethd keys works with RocketPool hybrid

--- a/lighthouse.yml
+++ b/lighthouse.yml
@@ -97,6 +97,10 @@ services:
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - /etc/localtime:/etc/localtime:ro
+    networks:
+      default:
+        aliases:
+          - vc
     <<: *logging
     entrypoint:
       - docker-entrypoint-vc.sh
@@ -180,7 +184,7 @@ services:
     entrypoint:
       - keymanager.sh
       - /var/lib/lighthouse/validators/api-token.txt
-      - validator
+      - vc
 
 volumes:
   lhbeacon-data:
