--- a/nethermind/Dockerfile.source
+++ b/nethermind/Dockerfile.source
@@ -19,7 +19,7 @@ RUN bash -c "\
     git submodule update --init --recursive && \
     dotnet publish src/Nethermind/Nethermind.Runner -c release -o out"
 
-FROM alpine as dasel
+FROM alpine:3 as dasel
 RUN arch=$(arch | sed s/aarch64/arm64/ | sed s/x86_64/amd64/) && \
     wget -q https://github.com/TomWright/dasel/releases/download/v2.2.0/dasel_linux_${arch} -O /usr/local/bin/dasel && \
     chmod +x /usr/local/bin/dasel
