--- a/nimbus.yml
+++ b/nimbus.yml
@@ -78,7 +78,7 @@ services:
   wipe-db:
     profiles: ["tools"]
     restart: "no"
-    image: alpine:latest
+    image: alpine:3
     user: "10002"
     volumes:
       - nimbus-data:/var/lib/nimbus
