Revert "Remove dasel (#1405)"
This reverts commit 8e7ef087387c81e18062c8767928d448497b8e51.

--- a/nimbus.yml
+++ b/nimbus.yml
@@ -78,7 +78,7 @@ services:
   wipe-db:
     profiles: ["tools"]
     restart: "no"
-    image: alpine:3
+    image: alpine:latest
     user: "10002"
     volumes:
       - nimbus-data:/var/lib/nimbus
