Better Reth build

--- a/reth.yml
+++ b/reth.yml
@@ -26,6 +26,7 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-info}
       # Make this RUST_LOG=${LOG_LEVEL:-info},engine=trace when requiring deep debug
       - RUST_LOG=${LOG_LEVEL:-info}
+      - RUST_LOG_STYLE=never
     volumes:
       - reth-el-data:/var/lib/reth
       - /etc/localtime:/etc/localtime:ro
