Change Teku default heap to 6g, from 5g

--- a/default.env
+++ b/default.env
@@ -114,7 +114,7 @@ CL_EXTRAS=
 VC_EXTRAS=
 
 # Heap for Besu and Teku, both written in Java. Sets JAVA_OPTS to this
-# value, for example BESU_HEAP=-Xmx8g to set it to 8g. If left empty, the
+# value, for example TEKU_HEAP=-Xmx12g to set it to 12g. If left empty, the
 # defaults in besu.yml and teku.yml are used.
 BESU_HEAP=
 TEKU_HEAP=
