Reth binary build

--- a/default.env
+++ b/default.env
@@ -226,8 +226,8 @@ NIMEL_DOCKERFILE=Dockerfile.source
 # Reth
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 RETH_SRC_BUILD_TARGET=main
-RETH_DOCKER_TAG=nonesuch
-RETH_DOCKERFILE=Dockerfile.source
+RETH_DOCKER_TAG=latest
+RETH_DOCKERFILE=Dockerfile.binary
 
 # staking-deposit-cli
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
