Allow promtail to be configurable and also allow adding extra loki push urls

--- a/grafana.yml
+++ b/grafana.yml
@@ -114,8 +114,9 @@ services:
       - ./promtail:/etc/promtail
       - promtail-data:/tmp
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
-    command:
-      - '--config.file=/etc/promtail/promtail.yml'
+    command: ["/usr/bin/promtail"]
+    environment:
+      LOKI_PUSH_URL: ${LOKI_PUSH_URL:-http://loki:3100/loki/api/v1/push}
     restart: "unless-stopped"
     depends_on:
       - loki
