add server label to server using .env

--- a/default.env
+++ b/default.env
@@ -30,6 +30,9 @@ WEB3SIGNER=false
 # Whether to explicitly enable IPv6 P2P. In use only for Lighthouse. See also v6-network.yml
 IPV6=false
 
+#LOGGING SECTION
+#SERVER_LABEL_HOSTNAME=serverlabelhere
+
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
