--- a/grafana-cloud.yml
+++ b/grafana-cloud.yml
@@ -127,7 +127,7 @@ services:
     entrypoint: ./etc/promtail/entrypoint.sh
     command: ["/usr/bin/promtail"]
     environment:
-      LOKI_PUSH_URL: ${LOKI_PUSH_URL:-http://loki:3100/loki/api/v1/push}
+      SERVER_LABEL_HOSTNAME: ${SERVER_LABEL_HOSTNAME:-notset}
     restart: "unless-stopped"
     depends_on:
       - loki
