Lodestar forces validator open, in case of lingering lock files

--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -64,6 +64,7 @@ services:
       - ${NETWORK}
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
+      - --force
 
   validator-exit:
     profiles: ["tools"]
