--- a/lodestar.yml
+++ b/lodestar.yml
@@ -124,6 +124,7 @@ services:
       - ${NETWORK}
       - --suggestedFeeRecipient
       - ${FEE_RECIPIENT}
+      - --force
 
   validator-exit:
     profiles: ["tools"]
