--- a/grafana.yml
+++ b/grafana.yml
@@ -114,6 +114,7 @@ services:
       - ./promtail:/etc/promtail
       - promtail-data:/tmp
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
+    entrypoint: ./etc/promtail/entrypoint.sh
     command: ["/usr/bin/promtail"]
     environment:
       SERVER_LABEL_HOSTNAME: ${SERVER_LABEL_HOSTNAME:-notset}
