Allow promtail to be configurable (#1439)
* Allow promtail to be configurable and also allow adding extra loki push urls

* Add custom loki config to gitignore

* add server label to server using .env

* Add/Fix promtail starting entrypoint

* Remove loki from grafana cloud, naming convenction on sample config

--- a/grafana.yml
+++ b/grafana.yml
@@ -107,8 +107,10 @@ services:
       - ./promtail:/etc/promtail
       - promtail-data:/tmp
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
-    command:
-      - '--config.file=/etc/promtail/promtail.yml'
+    entrypoint: ./etc/promtail/entrypoint.sh
+    command: ["/usr/bin/promtail"]
+    environment:
+      SERVER_LABEL_HOSTNAME: ${SERVER_LABEL_HOSTNAME:-notset}
     restart: "unless-stopped"
     depends_on:
       - loki
