Rename Loki label to LOGS_LABEL in .env

--- a/default.env
+++ b/default.env
@@ -30,8 +30,8 @@ WEB3SIGNER=false
 # Whether to explicitly enable IPv6 P2P. In use only for Lighthouse. See also v6-network.yml
 IPV6=false
 
-#LOGGING SECTION
-#SERVER_LABEL_HOSTNAME=serverlabelhere
+# Promtail logs label, something unique like the server name
+LOGS_LABEL=eth-docker
 
 # Secure web proxy - advanced use, please see instructions
 DOMAIN=example.com
