--- a/grafana.yml
+++ b/grafana.yml
@@ -110,7 +110,7 @@ services:
     entrypoint: ./etc/promtail/entrypoint.sh
     command: ["/usr/bin/promtail"]
     environment:
-      SERVER_LABEL_HOSTNAME: ${SERVER_LABEL_HOSTNAME:-notset}
+      SERVER_LABEL_HOSTNAME: ${LOGS_LABEL:-notset}
     restart: "unless-stopped"
     depends_on:
       - loki
