Change source builds to bookworm from bullseye

--- a/nimbus/Dockerfile.source
+++ b/nimbus/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Nimbus in a stock debian container
-FROM debian:bullseye-slim as builder
+FROM debian:bookworm-slim as builder
 
 # Included here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -12,7 +12,7 @@ WORKDIR /usr/src
 RUN bash -c "git clone --recurse-submodules -j8 https://github.com/status-im/nimbus-eth2 && cd nimbus-eth2 && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:nim-pr; git checkout nim-pr; else git checkout ${BUILD_TARGET}; fi && make -j$(nproc) update && make -j$(nproc) nimbus_beacon_node nimbus_validator_client"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:bullseye-slim as consensus
+FROM debian:bookworm-slim as consensus
 
 ARG USER=user
 ARG UID=10002
@@ -52,7 +52,7 @@ USER ${USER}
 
 ENTRYPOINT ["nimbus_beacon_node"]
 
-FROM debian:bullseye-slim as validator
+FROM debian:bookworm-slim as validator
 
 ARG USER=user
 ARG UID=10000
