--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -1,10 +1,10 @@
 # Build Lighthouse in a stock Rust build container
-FROM rust:bullseye as builder
+FROM rust:bookworm as builder
 # mallinfo2 is useful for memory troubleshooting but requires glibc 2.33. Debian Bullseye ships with 2.31
 #FROM ubuntu:jammy as builder
 
 ARG BUILD_TARGET
-ENV FEATURES modern,gnosis,slasher-lmdb,slasher-mdbx,jemalloc
+ENV FEATURES modern,gnosis,slasher-lmdb,jemalloc
 
 RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y cmake libclang-dev protobuf-compiler
 # Need a bit more in Ubuntu
@@ -17,7 +17,7 @@ WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/sigp/lighthouse.git && cd lighthouse && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:lh-pr; git checkout lh-pr; else git checkout ${BUILD_TARGET}; fi && make"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 # mallinfo2 is useful for memory troubleshooting but requires glibc 2.33. Debian Bullseye ships with 2.31
 #FROM ubuntu:jammy
 
