--- a/nimbus-el/Dockerfile.source
+++ b/nimbus-el/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Nimbus in a stock debian container
-FROM debian:bullseye-slim as builder
+FROM debian:bookworm-slim as builder
 
 # Included here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -13,7 +13,7 @@ WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/status-im/nimbus-eth1 && cd nimbus-eth1 && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:nim-pr; git checkout nim-pr; else git checkout ${BUILD_TARGET}; fi && make update && make -j$(nproc) nimbus"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
 ARG USER=user
 ARG UID=10001
