--- a/nimbus/Dockerfile.sourceslottime
+++ b/nimbus/Dockerfile.sourceslottime
@@ -1,5 +1,5 @@
 # Build Nimbus in a stock debian container
-FROM debian:bullseye-slim as builder
+FROM debian:bookworm-slim as builder
 
 # Included here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -14,7 +14,7 @@ RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-b
 	make -j$(nproc) NIMFLAGS="-d:SECONDS_PER_SLOT=${SECONDS_PER_SLOT}" nimbus_beacon_node"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
 ARG USER=user
 ARG UID=10002
