--- a/prysm/Dockerfile.source
+++ b/prysm/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Prysm in a stock Go build container
-FROM golang:1.20-bullseye as builder
+FROM golang:1.20-bookworm as builder
 
 # Here only to avoid build-time errors
 ARG DOCKER_TAG
@@ -14,7 +14,7 @@ if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TAR
 && bazel build --config=release //cmd/beacon-chain:beacon-chain && bazel build --config=release //cmd/validator:validator && bazel build --config=release //cmd/client-stats:client-stats"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:bullseye-slim as consensus
+FROM debian:bookworm-slim as consensus
 
 ARG USER=prysmconsensus
 ARG UID=10002
