Configurable traefik and ddns tags

--- a/default.env
+++ b/default.env
@@ -238,5 +238,9 @@ DEPCLI_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
 
+# traefik and cf-ddns
+TRAEFIK_TAG=v2.10
+DDNS_TAG=3
+
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
