--- a/ssv.yml
+++ b/ssv.yml
@@ -10,7 +10,8 @@ x-logging: &logging
 services:
   ssv-node:
     restart: "unless-stopped"
-    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest}
+#    image: bloxstaking/ssv-node:${SSV_NODE_TAG:-latest}
+    image: bloxstaking/ssv-node-unstable:${SSV_NODE_TAG:-latest}
     user: 12000:12000
     volumes:
       - ./ssv-config.yaml:/config.yaml
