--- a/default.env
+++ b/default.env
@@ -152,7 +152,7 @@ MEV_NODE=http://mev-boost:18550
 # The default source build targets build from the latest github tag
 
 # SSV
-SSV2_NODE_TAG=latest
+SSV_NODE_TAG=latest
 
 # MEV-Boost
 # If mev-boost terminates with a SIGILL, make this one of the "portable" tags
