--- a/prometheus/ssv-prom.yml
+++ b/prometheus/ssv-prom.yml
@@ -2,9 +2,9 @@
     metrics_path: /metrics
     static_configs:
       - targets:
-        - ssv2-node:15000
+        - ssv-node:15000
   - job_name: ssv_health
     metrics_path: /health
     static_configs:
       - targets:
-        - ssv2-node:15000
+        - ssv-node:15000
