--- a/ssv-config-sample.yaml
+++ b/ssv-config-sample.yaml
@@ -1,18 +1,20 @@
-db:
-  Path: /tmp/ssv-db
-  Type: badger-db
+OperatorPrivateKey: YOURPRIVATEKEYHERE
+ssv:
+  network: jato-v2
 p2p:
   DiscoveryType: discv5
   TcpPort: 13001
   UdpPort: 12001
+db:
+  Path: /tmp/ssv/db
+  Type: badger-db
 eth2:
   BeaconNodeAddr: http://consensus:5052
-  Network: prater
 eth1:
   ETH1Addr: ws://execution:8546
-OperatorPrivateKey: YOURPRIVATEKEYHERE
 MetricsAPIPort: 15000
 global:
   LogFormat: json
   LogLevelFormat: lowercase
   LogLevel: info
+  LogFilePath: /tmp/ssv/debug.log
