Bring json- and blackbox-exporter back for metanull's dashbaord

--- a/.github/workflows/test-grafana.yml
+++ b/.github/workflows/test-grafana.yml
@@ -40,6 +40,12 @@ jobs:
       - name: Test cryptowat exporter
         run: |
           ./.github/check-service.sh cryptowat-exporter
+      - name: Test blackbox exporter
+        run: |
+          ./.github/check-service.sh blackbox-exporter
+      - name: Test json exporter
+        run: |
+          ./.github/check-service.sh json-exporter
       - name: Test cadvisor
         run: |
           ./.github/check-service.sh cadvisor
