--- a/grafana-cloud.yml
+++ b/grafana-cloud.yml
@@ -63,26 +63,26 @@ services:
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
 
-#  blackbox-exporter:
-#    restart: "unless-stopped"
-#    image: prom/blackbox-exporter:master
-#    volumes:
-#      - ./prometheus/blackbox.yml:/config/blackbox.yml
-#      - /etc/localtime:/etc/localtime:ro
-#    <<: *logging
-#    command:
-#      - --config.file=/config/blackbox.yml
+  blackbox-exporter:
+    restart: "unless-stopped"
+    image: prom/blackbox-exporter:master
+    volumes:
+      - ./prometheus/blackbox.yml:/config/blackbox.yml
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    command:
+      - --config.file=/config/blackbox.yml
 
-#  json-exporter:
-#    restart: "unless-stopped"
-#    image: prometheuscommunity/json-exporter:latest
-#    volumes:
-#      - ./prometheus/json.yml:/config/json.yml
-#      - /etc/localtime:/etc/localtime:ro
-#    <<: *logging
-#    command:
-#      - --config.file
-#      - /config/json.yml
+  json-exporter:
+    restart: "unless-stopped"
+    image: prometheuscommunity/json-exporter:latest
+    volumes:
+      - ./prometheus/json.yml:/config/json.yml
+      - /etc/localtime:/etc/localtime:ro
+    <<: *logging
+    command:
+      - --config.file
+      - /config/json.yml
 
   cryptowat-exporter:
     restart: "unless-stopped"
