--- a/prometheus/global.yml
+++ b/prometheus/global.yml
@@ -19,3 +19,48 @@ scrape_configs:
     scrape_interval: 300s
     static_configs:
       - targets: ['cryptowat-exporter:9745']
+  - job_name: 'ping_google'
+    metrics_path: /probe
+    params:
+      module: [icmp]
+    static_configs:
+      - targets:
+        - 8.8.8.8
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
+  - job_name: 'ping_cloudflare'
+    metrics_path: /probe
+    params:
+      module: [icmp]
+    static_configs:
+      - targets:
+        - 1.1.1.1
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
+  - job_name: 'json_exporter'
+    static_configs:
+    - targets: ['json-exporter:7979']
+  - job_name: 'json'
+    metrics_path: /probe
+    params:
+      module: [default]
+    static_configs:
+    - targets:
+      - https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=usd
+    relabel_configs:
+    - source_labels: [__address__]
+      target_label: __param_target
+    - source_labels: [__param_target]
+      target_label: instance
+    - target_label: __address__
+      replacement: json-exporter:7979
