--- a/.github/workflows/test-lighthouse-reth.yml
+++ b/.github/workflows/test-lighthouse-reth.yml
@@ -26,6 +26,9 @@ jobs:
           COMPOSE_FILE=lighthouse.yml:reth.yml
           var=COMPOSE_FILE
           set_value_in_env
+          FEE_RECIPIENT=0xDccf8451070a86183eE70D330C4c43b686E9CF86
+          var=FEE_RECIPIENT
+          set_value_in_env
       - name: Start Lighthouse/Reth
         run: |
           ./ethd up
