--- a/.github/workflows/test-nimbus-nethermind.yml
+++ b/.github/workflows/test-nimbus-nethermind.yml
@@ -26,6 +26,9 @@ jobs:
           COMPOSE_FILE=nimbus.yml:nethermind.yml
           var=COMPOSE_FILE
           set_value_in_env
+          FEE_RECIPIENT=0xDccf8451070a86183eE70D330C4c43b686E9CF86
+          var=FEE_RECIPIENT
+          set_value_in_env
       - name: Start Nimbus/Nethermind
         run: |
           ./ethd up
