--- a/.github/workflows/test-teku-besu.yml
+++ b/.github/workflows/test-teku-besu.yml
@@ -26,6 +26,9 @@ jobs:
           COMPOSE_FILE=teku.yml:besu.yml
           var=COMPOSE_FILE
           set_value_in_env
+          FEE_RECIPIENT=0xDccf8451070a86183eE70D330C4c43b686E9CF86
+          var=FEE_RECIPIENT
+          set_value_in_env
       - name: Start Teku/Besu
         run: |
           ./ethd up
