--- a/default.env
+++ b/default.env
@@ -153,6 +153,8 @@ MEV_NODE=http://mev-boost:18550
 
 # SSV
 SSV_NODE_TAG=latest
+# Legacy
+SSV2_NODE_TAG=latest
 
 # MEV-Boost
 # If mev-boost terminates with a SIGILL, make this one of the "portable" tags
