Switch to new Blox SSV network (#1459)
* Switch to new Blox SSV network

* Fix ssv-config.yaml

* Fix SSV Dashboard jq

* Support legacy along jato v2 SSV

* Create legacy SSV conf file on start

* Rename role to ssv

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ ext-network.yml.original
 *.swp
 alertmanager/config.yml
 prometheus/custom-prom.yml
+ssv-config.yaml
+ssv-config.yaml.bak
 blox-ssv-config.yaml
 blox-ssv-config.yaml.bak
 promtail/custom-lokiurl.yml
