--- a/default.env
+++ b/default.env
@@ -152,6 +152,8 @@ MEV_NODE=http://mev-boost:18550
 # The default source build targets build from the latest github tag
 
 # SSV
+SSV_NODE_TAG=latest
+# Legacy
 SSV2_NODE_TAG=latest
 
 # MEV-Boost
